[DELIVERS BUGFIX #31] Removes scrollbars from rubric generator in IE9

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -2099,6 +2099,11 @@ a.table--heading {
     color: $tealMedium;
     padding: 0 1.6rem;
   }
+  div {
+    .ie9 & {
+      overflow: hidden;
+    }
+  }
   .editable & {
     display: table-cell;
     vertical-align: middle;
